--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: '2'
 services:
-  clicc_db:
+  dev:
+    restart: always
+    image: ericdfournier/dev:latest
+    ports:
+      - "443:8888"
+    environment: 
+      PASSWORD: clicc
+      USE_HTTPS: 'yes'
+    # volume: /some/host/folder/for/work:/home/jovyan/work
+    # volume: /some/host/folder/for/server.pem:/home/jovyan/.local/share/jupyter/notebook.pem
+  db:
     restart: always
     ports:
-    - "5432:5432"
-    image: ericdfournier/clicc_db:latest
+      - "5432:5432"
+    image: ericdfournier/db:latest
     environment:
       POSTGRES_USER: clicc
       POSTGRES_PASSWORD: clicc
