Added data directory to gitignore, updated configuration scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Certificates #
-###################
+######################
 *.pem
 
 # OS generated files #
@@ -11,3 +11,7 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+* Data Directory #
+######################
+data/
